<resources>
    <string name="app_name">module_home</string>
    <string name="topping">置顶</string>
    <string name="newing">新</string>
    <string name="article_tag">文章标签</string>
    <string name="article_title">文章标题</string>
    <string name="article_author">文章作者</string>
    <string name="release_time">发布时间</string>
    <string name="author">作者：%1$s</string>
    <string name="shareUser">分享人：%1$s</string>
    <string name="category">种类\n</string>
    <string name="article_category">%1$s&#047;%2$s</string>
</resources>

<!--Android资源文件strings实现特殊字符转义:https://www.jianshu.com/p/39400832f505/-->
